--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3.29"
-sea-orm = {version= "0.12.6", features=["sqlx-postgres", "runtime-async-std-native-tls", "macros"]}
+sea-orm = {version= "0.12.6", features=["sqlx-postgres", "runtime-async-std-native-tls", "macros", "mock"]}
+sea-orm-migration = "0.12.6"
