--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,10 @@
-
-version: '3'
 services:
-  db:
+  postgres:
     image: postgres:latest
-    restart: always
+    container_name: seaorm_tutorial
     environment:
+      POSTGRES_USER: root
       POSTGRES_PASSWORD: password
+      POSTGRES_DB: postgres
     ports:
-      - 5435:5432
+      - "5435:5432"
